# HMS_optics

./: .gitignore  HMS_coordinates.fig  HMS_optics_fit_output.C  HMS_optics_fit_output_C_ACLiC_dict_rdict.pcm  HMS_tree.C  HMS_tree.h  HMS_ytarget_fit.C  README.md  setup_optics_z1cm_noxbeam.txt  setup_optics_z1cm_noxbeam_simple.txt  setup_optics_z1cm_noxbeam_single.txt
scripts/: display_matrix_new.py  display_matrix_old.py  matrix_utils.py  split_matrix_new.py  split_matrix_old.py
source/: CMakeLists.txt  hms_optics.cpp  reconstruct.cpp
source/data/: setup_optics_example.txt
source/data/hmsoptics/: hms68735.8.root
source/inc/: cmdOptions.hpp  myConfig.hpp  myEvent.hpp  myMath.hpp  myOther.hpp  myRecMatrix.hpp
source/src/: cmdOptions.cpp  myConfig.cpp  myEvent.cpp  myMath.cpp  myOther.cpp  myRecMatrix.cpp
